fixed some breadcrumb navigation alignment issues

--- a/css/styles1.css
+++ b/css/styles1.css
@@ -300,6 +300,10 @@ USED FOR ICONS
         text-align: center;
     }
 
+    .breadcrumb-navigation-alignment{
+        grid-column: 2/ span 10;
+    }
+
     
 }
 
